:zap: generate inputs on flip function value change done dropdown styles scrollbar and space fixed

--- a/src/styles/dropdown.scss
+++ b/src/styles/dropdown.scss
@@ -48,14 +48,23 @@
     pointer-events: none;
   }
 
-  .dropdown__items {
+  .dropdown__scroll {
     position: absolute;
     top: 120%;
     left: 0;
     width: fit-content;
+    height: fit-content;
+    border-radius: $border-radius-sm;
+    overflow: hidden;
+    z-index: 5;
+  }
+
+  .dropdown__items {
+    width: fit-content;
+    height: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: flex-start;
     border-radius: $border-radius-sm;
     background-color: $primary-dark;
@@ -66,8 +75,25 @@
     transition: all 0.2s ease-in-out;
     user-select: none;
     pointer-events: none;
+    overflow: hidden;
+
+    // Mozilla
+    scrollbar-width: 5px;
+    scrollbar-color: $primary-dark;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      background-color: $primary-dark;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $primary;
+    }
 
     &.open {
+      height: 20rem;
+      overflow: hidden;
+      overflow-y: auto;
       opacity: 1;
       z-index: 1;
       user-select: auto;
@@ -77,7 +103,6 @@
     li {
       width: 100%;
       border-bottom: 1px solid $primary;
-      border-radius: inherit;
       padding: 1rem;
       font-weight: normal;
       cursor: pointer;
