--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
 $border-radius-lg: 50px;
 $border-radius-md: 20px;
 $border-radius-md-2: 30px;
-$border-radius-sm: 20px;
+$border-radius-sm: 10px;
